# trudido-scanner

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/trudido/scanner/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/trudido/scanner/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scanner/: build.gradle.kts
scanner/src/androidTest/java/com/trudido/scanner/: ExampleInstrumentedTest.kt
scanner/src/main/: AndroidManifest.xml
scanner/src/main/cpp/: CMakeLists.txt  omp_stubs.c  scanner.cpp
scanner/src/main/java/com/trudido/scanner/: CropActivity.kt  CropOverlayView.kt  DocumentAnalyzer.kt  DocumentOverlayView.kt  NativeLib.kt  NativeScanner.kt  ScannerActivity.kt
scanner/src/main/res/layout/: activity_crop.xml  activity_scanner.xml
